--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     content='gates wrought automatic iron opener security driveway electric fence ornamental device garden openers steel door gate metal operator hardware operating system new nj new jersey' />
 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+
 
   <meta name="google-site-verification" content="tBnX8w_pMOMCFGVcExhxY4wuVcltJS5F6mNte-9rk9E" />
   <meta name="msvalidate.01" content="64CE44C1FAB76177271D55DD5EF396EE" />
