--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ var IS_ARCHIVE = 1;
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-6">
           <div id="921612203132654052-lhs" class="column"
             style="float: left; overflow: visible; margin: 0; padding: 0;">
             <div style="" class="columnlistp">
@@ -218,7 +218,7 @@ var IS_ARCHIVE = 1;
           </div>
         </div>
 
-        <div class="col-lg-6">
+        <div class="col-6">
           <div id="921612203132654052-rhs" class="column"
             style="left: 49.5%; float: left; overflow: visible; margin: 0; padding: 0;">
             <div style="padding-left: 5px;" class="columnlistp">
@@ -260,7 +260,7 @@ var IS_ARCHIVE = 1;
 
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-6">
           <div id="583826300220870305-lhs" class="column"
             style=" float: left; overflow: visible; margin: 0; padding: 0;">
             <div style="" class="columnlistp">
@@ -304,7 +304,7 @@ var IS_ARCHIVE = 1;
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-6">
           <div id="583826300220870305-rhs" class="column"
             style=" left: 49.5%; float: left; overflow: visible; margin: 0; padding: 0;">
             <div style="padding-left: 5px;" class="columnlistp">
@@ -362,7 +362,7 @@ var IS_ARCHIVE = 1;
       <!-- footer           -->
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-6">
           <div id="817435710533799782-lhs" class="column"
             style=" float: left; overflow: visible; margin: 0; padding: 0;">
             <div style="padding-right: 5px;" class="columnlistp">
@@ -398,7 +398,7 @@ var IS_ARCHIVE = 1;
             </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-6">
           <div id="817435710533799782-rhs" class="column"
             style=" left: 49.5%; float: left; overflow: visible; margin: 0; padding: 0; margin-top: 12px;">
             <div style="" class="columnlistp">
