--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@ var IS_ARCHIVE = 1;
         </div>
 
         <div class="row" style="text-align: center;">
-          <div class="col-lg-4"> <span class='imgPusher' style='float:left;height:0px'></span><span
+          <div class="col-4"> <span class='imgPusher' style='float:left;height:0px'></span><span
               style=' z-index: 10;'><a><img src="uploads/5/3/6/1/5361547/1998695.jpg?352" alt="Picture"
-                  class="galleryImageBorder  img-fluid galleryImage" style=" height: 275px;" /></a>
+                  class="galleryImageBorder  img-fluid galleryImage" style=" height: 250px;" /></a>
               <div style="display: block; font-size: 90%; margin-top: -10px; margin-bottom: 10px; text-align: center;">
               </div>
             </span>
           </div>
-          <div class="col-lg-8 ">
+          <div class="col-8 ">
             <div class="paragraph editable-text" style=" text-align: left; display: block; "><span
                 style="font-size: x-large; font-family: Arial, Helvetica, sans-serif; line-height: normal; "><strong>
                   <font color="#333399">NJ Gates</font>
