--- a/index.html
+++ b/index.html
@@ -1,60 +1,37 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
-  <meta http-equiv='X-UA-Compatible' content='IE=EmulateIE7' />
-  <title>Rolling Gate - Installation, Repair and Maintenance&nbsp; - Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <meta name='description'
-    content='Wrought iron driveway gates for residential and commercial properties. Automatic gate openers and gate operators for swing and slide electric gates. Residential wrought iron fence.' />
-  <meta name='keywords'
-    content='gates wrought automatic iron opener security driveway electric fence ornamental device garden openers steel door gate metal operator hardware operating system new nj new jersey' />
+<meta http-equiv='X-UA-Compatible' content='IE=EmulateIE7' />
+<title>Rolling  Wrought Iron Gates - Rolling Gate - Installation, Repair and Maintenance&nbsp;</title>
 
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-
-  <meta name="google-site-verification" content="tBnX8w_pMOMCFGVcExhxY4wuVcltJS5F6mNte-9rk9E" />
-  <meta name="msvalidate.01" content="64CE44C1FAB76177271D55DD5EF396EE" />
-  <link rel='stylesheet' href='http://cdn1.weebly.com/editor/images/common/common.css?9' type='text/css' />
-  <link rel='stylesheet' type='text/css' href='files/main_style.css?1304809261' title='wsite-theme-css' />
-  <style type='text/css'>
-    #wsite-content div.paragraph,
-    #wsite-content p,
-    #wsite-content.product-description,
-    .blog-sidebar div.paragraph,
-    .blog-sidebar p {}
-
-    #wsite-content h2,
-    #wsite-content .product-title,
-    .blog-sidebar h2 {}
-
-    #wsite-title {}
-  </style>
-  <style type='text/css'>
-    .wsite-header {
-      background-image: url(uploads/5/3/6/1/5361547/header_images/1304808874.jpg) !important;
-      background-position: 0 0 !important;
-    }
-  </style>
-  <script type='text/javascript'>< !-
+<meta name="google-site-verification" content="tBnX8w_pMOMCFGVcExhxY4wuVcltJS5F6mNte-9rk9E" /><meta name="msvalidate.01" content="64CE44C1FAB76177271D55DD5EF396EE" /><link rel='stylesheet' href='http://cdn1.weebly.com/editor/images/common/common.css?9' type='text/css' />
+<link rel='stylesheet' type='text/css' href='files/main_style.css?1304809261' title='wsite-theme-css' />
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<style type='text/css'> #wsite-content div.paragraph, #wsite-content p, #wsite-content.product-description, .blog-sidebar div.paragraph, .blog-sidebar p {} #wsite-content h2, #wsite-content .product-title, .blog-sidebar h2 {} #wsite-title {} </style> <style type='text/css'> .wsite-header { background-image: url(uploads/5/3/6/1/5361547/header_images/1304808874.jpg) !important; background-position: 0 0 !important; } </style>
+<style type='text/css'>
+.wsite-header {
+	background-image: url(uploads/5/3/6/1/5361547/header_images/1304808874.jpg) !important;
+	background-position: 0 0 !important;
+}
+</style>
+<script type='text/javascript'><!--
 var STATIC_BASE = 'http://cdn1.weebly.com/';
-    var STYLE_PREFIX = 'wsite';
-
-  </script>
-  <script type='text/javascript' src='http://cdn1.weebly.com/libraries/prototype/1.7-custom/prototype.min.js'></script>
-  <script type='text/javascript'
-    src='http://cdn1.weebly.com/libraries/scriptaculous/1.9.0-custom/effects.min.js'></script>
-  <script type='text/javascript' src='http://cdn1.weebly.com/editor/images/common/utilities.js?1'></script>
-  <script type='text/javascript' src='http://cdn1.weebly.com/editor/images/common/lightbox202.js?9'></script>
-  <script type='text/javascript' src='http://cdn1.weebly.com/editor/libraries/flyout_menus.js?13'></script>
-  <script type='text/javascript'>< !-
-var IS_ARCHIVE = 1;
-    function initFlyouts() { initPublishedFlyoutMenus([{ "id": "924730034210465296", "title": "Home", "url": "index.html" }, { "id": "442686772714001029", "title": "Rolling Gate Repair", "url": "rolling-gate-repair.html" }, { "id": "657196885996139907", "title": "Rolling Gate Installation", "url": "rolling-gate-installation.html" }, { "id": "355233494103329505", "title": "Rolling  Wrought Iron Gates", "url": "rolling-wrought-iron-gates.html" }, { "id": "684816193168663390", "title": "Rolling Slide Gates", "url": "rolling-slide-gates.html" }, { "id": "497149247460484393", "title": "Rolling Rolling Gate", "url": "rolling-rolling-gate.html" }, { "id": "277088809822814683", "title": "Rolling Swing Gate", "url": "rolling-swing-gate.html" }, { "id": "266678197460344444", "title": "Rolling Driveway Gates", "url": "rolling-driveway-gates.html" }, { "id": "566024857182567236", "title": "Rolling Steel Gate", "url": "rolling-steel-gate.html" }, { "id": "261812127227260427", "title": "Rolling Wood Gates", "url": "rolling-wood-gates.html" }, { "id": "962737251301127608", "title": "Rolling Arm Barrier", "url": "rolling-arm-barrier.html" }, { "id": "480843005901722681", "title": "Rolling Windows Gates", "url": "rolling-windows-gates.html" }, { "id": "628665595754828116", "title": "Rolling Railings", "url": "rolling-railings.html" }, { "id": "345394151767252207", "title": "Rolling Fencing", "url": "rolling-fencing.html" }, { "id": "787213792246527965", "title": "Rolling Garage Door", "url": "rolling-garage-door.html" }, { "id": "956071616634472778", "title": "Rolling Gates Blog", "url": "rolling-gates-blog.html" }], '924730034210465296', "<li class='wsite-nav-more'><a href='#'>more...<\/a><\/li>", 'active', false) }
-    if (Prototype.Browser.IE) window.onload = initFlyouts; else document.observe('dom:loaded', initFlyouts);
-
-  </script>
+var STYLE_PREFIX = 'wsite';
+//-->
+</script>
+<script type='text/javascript' src='http://cdn1.weebly.com/libraries/prototype/1.7-custom/prototype.min.js'></script>
+<script type='text/javascript' src='http://cdn1.weebly.com/libraries/scriptaculous/1.9.0-custom/effects.min.js'></script>
+<script type='text/javascript' src='http://cdn1.weebly.com/editor/images/common/utilities.js?1'></script>
+<script type='text/javascript' src='http://cdn1.weebly.com/editor/images/common/lightbox202.js?9'></script>
+<script type='text/javascript' src='http://cdn1.weebly.com/editor/libraries/flyout_menus.js?13'></script>
+<script type='text/javascript'><!--
+var IS_ARCHIVE=1;
+function initFlyouts(){initPublishedFlyoutMenus([{"id":"924730034210465296","title":"Home","url":"index.html"},{"id":"442686772714001029","title":"Rolling Gate Repair","url":"rolling-gate-repair.html"},{"id":"657196885996139907","title":"Rolling Gate Installation","url":"rolling-gate-installation.html"},{"id":"355233494103329505","title":"Rolling  Wrought Iron Gates","url":"rolling-wrought-iron-gates.html"},{"id":"684816193168663390","title":"Rolling Slide Gates","url":"rolling-slide-gates.html"},{"id":"497149247460484393","title":"Rolling Rolling Gate","url":"rolling-rolling-gate.html"},{"id":"277088809822814683","title":"Rolling Swing Gate","url":"rolling-swing-gate.html"},{"id":"266678197460344444","title":"Rolling Driveway Gates","url":"rolling-driveway-gates.html"},{"id":"566024857182567236","title":"Rolling Steel Gate","url":"rolling-steel-gate.html"},{"id":"261812127227260427","title":"Rolling Wood Gates","url":"rolling-wood-gates.html"},{"id":"962737251301127608","title":"Rolling Arm Barrier","url":"rolling-arm-barrier.html"},{"id":"480843005901722681","title":"Rolling Windows Gates","url":"rolling-windows-gates.html"},{"id":"628665595754828116","title":"Rolling Railings","url":"rolling-railings.html"},{"id":"345394151767252207","title":"Rolling Fencing","url":"rolling-fencing.html"},{"id":"787213792246527965","title":"Rolling Garage Door","url":"rolling-garage-door.html"},{"id":"956071616634472778","title":"Rolling Gates Blog","url":"rolling-gates-blog.html"}],'355233494103329505',"<li class='wsite-nav-more'><a href='#'>more...<\/a><\/li> ",'active',false)}
+if (Prototype.Browser.IE) window.onload=initFlyouts; else document.observe('dom:loaded', initFlyouts);
+//-->
+</script>
 </head>
 
 <body class='wsite-page-index'>
